[project]
name = "lstm-memorizer"
version = "0.0.1"
description = " PoC for embedding text files into the weights of a character-level LSTM neural network "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "ruff>=0.12.2",
    "safetensors>=0.5.3",
    "torch>=2.7.1",
]
